--- a/usermanagement/src/App.css
+++ b/usermanagement/src/App.css
@@ -1,13 +1,20 @@
 .App {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   background-color: rgb(204, 223, 233);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
+  position: relative;
 }
 
+.backDrop {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.65);
+  z-index: 10;
+}
 ul,
 li {
   list-style: none;
