--- a/usermanagement/src/components/UI/Card.scss
+++ b/usermanagement/src/components/UI/Card.scss
@@ -7,7 +7,7 @@
 }
 
 .formCard {
-  margin-bottom: 40px;
+  margin: 150px 0px 50px 0px;
   form {
     display: flex;
     flex-direction: column;
@@ -35,5 +35,31 @@
         transform: translateY(-2px);
       }
     }
+  }
+}
+
+.errModal {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35%;
+  background-color: rgb(255, 168, 97);
+  color: white;
+  font-weight: bold;
+  z-index: 10;
+  & div:nth-child(1) {
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+  }
+  button {
+    position: absolute;
+    right: 10%;
+    bottom: 10%;
+    background-color: white;
+    border: none;
+    padding: 1% 4%;
+    border-radius: 8px;
+    cursor: pointer;
   }
 }
