--- a/usermanagementlecture/src/components/Users/AddUser.module.css
+++ b/usermanagementlecture/src/components/Users/AddUser.module.css
@@ -3,6 +3,7 @@
   padding: 1rem;
   width: 90%;
   max-width: 40rem;
+  border-radius: 8px;
 }
 
 .input label {
@@ -24,4 +25,3 @@
   outline: none;
   border-color: #4f005f;
 }
-
