--- a/foodorder/src/UI/CartModal/CartModal.module.css
+++ b/foodorder/src/UI/CartModal/CartModal.module.css
@@ -76,3 +76,12 @@ hr {
 .modalBtnBox button {
   margin-left: 0.6rem;
 }
+.priceBox {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  font-weight: bold;
+  font-size: 1.4rem;
+}
